Fix a crash exploit which allowed ops to crash anyone's client who's using a Java version less than 21